@@ -25,13 +25,15 @@ class InvoiceLine:
     __name__ = 'account.invoice.line'
 
     gross_unit_price = fields.Numeric('Gross Price', digits=(16, DIGITS),
-        states=STATES)
+        states=STATES, depends=['type'])
     gross_unit_price_wo_round = fields.Numeric('Gross Price without rounding',
         digits=(16, DIGITS + DISCOUNT_DIGITS), readonly=True)
     discount = fields.Numeric('Discount', digits=(16, DISCOUNT_DIGITS),
-        states=STATES)
+        states=STATES, depends=['type'])
     invoice_discount = fields.Numeric('Invoice Discount',
-        digits=(16, DISCOUNT_DIGITS))
+        digits=(16, DISCOUNT_DIGITS), states={
+            'invisible': Eval('type') != 'line',
+            }, depends=['type'])
 
     @classmethod
     def __setup__(cls):
